fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__message__tests__da_message_query_gql_output.snap
---
source: fuel-client/src/client/schema/message.rs
expression: operation.query
---
query Query($_0: Int, $_1: String, $_2: Int, $_3: String) {
  messages(first: $_0, after: $_1, last: $_2, before: $_3) {
    edges {
      cursor
      node {
        amount
        sender
        recipient
        owner
        nonce
        data
        daHeight
        fuelBlockSpend
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

