fuel-client/src/client/schema/snapshots/fuel_gql_client__client__schema__message__tests__owned_message_query_gql_output.snap
---
source: fuel-client/src/client/schema/message.rs
assertion_line: 105
expression: operation.query
---
query Query($_0: Address, $_1: Int, $_2: String, $_3: Int, $_4: String) {
  messagesByOwner(owner: $_0, first: $_1, after: $_2, last: $_3, before: $_4) {
    edges {
      cursor
      node {
        amount
        sender
        recipient
        owner
        nonce
        data
        daHeight
        fuelBlockSpend
      }
    }
    pageInfo {
      endCursor
      hasNextPage
      hasPreviousPage
      startCursor
    }
  }
}

